# PUBLIC---ADTR---PUBLIC

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: LICENSE
examples/: example-architecture-decision.json  example-code-generation.json
schema/: adtr-v0.1.schema.json
validator/: __init__.py  cli.py  validate.py
