[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adtr-validate"
version = "0.1.0"
description = "CLI validator for ADTR (AI Decision Transparency Record) files."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Paarker SRL", email = "chad@paarker.com"},
]
keywords = ["adtr", "ai", "transparency", "decisions", "documentation", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "jsonschema>=4.20.0",
]

[project.scripts]
adtr-validate = "validator.cli:main"

[project.urls]
Homepage = "https://github.com/paarker/adtr"
Documentation = "https://github.com/paarker/adtr/tree/main/docs"
Repository = "https://github.com/paarker/adtr"
Issues = "https://github.com/paarker/adtr/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
